Correcting the overlap

--- a/src/components/GoalsComponents/UpdateGoal/UpdateGoalForm.scss
+++ b/src/components/GoalsComponents/UpdateGoal/UpdateGoalForm.scss
@@ -141,14 +141,13 @@
 .updatetodo-form{
   padding-top: 5em;
 }
-
   #changeColor-btn-update {
     width: 6.2em;
     height: 3em;
     margin-top: 0.5em;
     position: absolute;
     right: 0;
-    margin-right: 50%;
+    margin-right: 60%;
     border: none;
     padding: 0.8em;
     border-radius: 10px;
@@ -165,7 +164,7 @@
     position: absolute;
     margin-top:-5em;
     right:0;
-    margin-right:1.2em;
+    margin-right:1em;
     color: white !important;
     // background: #AC3B61 !important;
     border-radius: 10px !important;
